fixes border gap on ios

--- a/packages/core/src/components/radio-pill/_radio-pill.scss
+++ b/packages/core/src/components/radio-pill/_radio-pill.scss
@@ -36,6 +36,7 @@
     appearance: none;
     width: 0;
     height: 0;
+    margin: 0 -$ray-border-width;
     opacity: 0;
 
     &:checked + .#{$ray-class-prefix}radio-pill__label {
